<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/black_border"
    android:padding="8dp"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/mediaImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/contactNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactname"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/contactNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactno"
        android:textColor="@color/black"
        android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
